--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "express-validator": "^7.2.1",
-    "passport": "^0.7.0",
-    "passport-local": "^1.0.0",
+    "jsonwebtoken": "^9.0.3",
     "pg": "^8.16.3"
   },
   "devDependencies": {
