--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@quixo3/prisma-session-store": "^3.1.13",
     "bcryptjs": "^3.0.3",
     "connect-pg-simple": "^10.0.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
