--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "express-session": "^1.18.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.3",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "remark": "^15.0.1",
+    "remark-parse": "^11.0.0",
+    "strip-markdown": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
