--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --watch --env-file=.env app.js",
+    "dev": "node --watch --watch-path=. --watch-preserve-output --env-file=.env app.js",
     "prod": "node ./models/populatedb.js && node app.js"
   },
   "keywords": [],
